problem with select

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 Current day: <br>
 <ol>
     <li>
-        {{tutorials}}  <!-- ...| async -->
+        {{myObject.currentDay}}  <!-- ...| async -->
     </li>
     <button (click)='plus()'>PLUS</button>
 </ol>
